// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`learn more renders correctly with a single link 1`] = `
<DocumentFragment>
  .emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-2 {
  box-sizing: border-box;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  box-sizing: border-box;
  min-width: 0;
}

<div
    class="emotion-3"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-1"
      >
        See also: 
        <a
          class="emotion-0"
          href="/foobar"
        >
          Foobar
        </a>
      </div>
      <div>
        Icon: lightbulb-on-outline
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`learn more renders correctly with multiple links 1`] = `
<DocumentFragment>
  .emotion-5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-4 {
  box-sizing: border-box;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  box-sizing: border-box;
  min-width: 0;
}

<div
    class="emotion-5"
  >
    <div
      class="emotion-4"
    >
      <div
        class="emotion-3"
      >
        <div>
          See also:
        </div>
        <div>
          <a
            class="emotion-0"
            href="/foobar"
          >
            a
          </a>
        </div>
        <div>
          <a
            class="emotion-0"
            href="/foobar"
          >
            b
          </a>
        </div>
        <div>
          <a
            class="emotion-0"
            href="/foobar"
          >
            c
          </a>
        </div>
      </div>
      <div>
        Icon: lightbulb-on-outline
      </div>
    </div>
  </div>
</DocumentFragment>
`;
